# cuda_sad_visual_tracker

./: CMakeLists.txt  README.md
include/: fast_tracker.cuh
scripts/: build.sh
src/cpu/: fast_tracker.cpp  main.cpp
src/cuda/: fast_sad.cu
